git fix not showing cart product detail (#57)

--- a/psbv-customer/src/app/home/product-info/product-info.page.scss
+++ b/psbv-customer/src/app/home/product-info/product-info.page.scss
@@ -277,7 +277,7 @@ ion-infinite-scroll {
 .cart-wrapper {
   position: fixed;
   right: 15px;
-  bottom: 10px;
+  bottom: 110px;
   z-index: 1;
 
   .cart-btn {
